src/objects/RMU_Program_Name__c/RMU_Program_Name__c.object-meta.xml
<CustomObject>
    <description>This object is used for BGA PO Tracker dashboard AOPs display</description>
    <label>Offering Platform Group Program Name</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offering Platform Group Program Name</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>