src/objects/RMU_Program_Name__c/fields/AOP_For_Obsolute__c.field-meta.xml
<CustomField>
    <fullName>AOP_For_Obsolute__c</fullName>
    <label>_AOP For_Obsolute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APM</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>HAPP</fullName>
            </value>
            <value>
                <fullName>FSS</fullName>
            </value>
            <value>
                <fullName>DU875</fullName>
            </value>
            <value>
                <fullName>Easy II</fullName>
            </value>
            <value>
                <fullName>FMS 6.1</fullName>
            </value>
            <value>
                <fullName>CDSR</fullName>
            </value>
            <value>
                <fullName>OVATION</fullName>
            </value>
            <value>
                <fullName>DU885</fullName>
            </value>
            <value>
                <fullName>CGCR</fullName>
            </value>
            <value>
                <fullName>AIS2000</fullName>
            </value>
            <value>
                <fullName>HD710</fullName>
            </value>
            <value>
                <fullName>Cert F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>