src/objects/RMU_Program_Name__c/fields/RMU_Config_Name_Obsolute__c.field-meta.xml
<CustomField>
    <fullName>RMU_Config_Name_Obsolute__c</fullName>
    <label>_Offering Config Name_Obsolute</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AOP_For_Obsolute__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Easy II</fullName>
            </value>
            <value>
                <fullName>Cert F</fullName>
            </value>
            <value>
                <fullName>LPV</fullName>
            </value>
            <value>
                <fullName>Smartview Opt 3</fullName>
            </value>
            <value>
                <fullName>All Others</fullName>
            </value>
            <value>
                <fullName>FMS 6.1</fullName>
            </value>
            <value>
                <fullName>CDSR</fullName>
            </value>
            <value>
                <fullName>OVATION</fullName>
            </value>
            <value>
                <fullName>DU885</fullName>
            </value>
            <value>
                <fullName>CGCR</fullName>
            </value>
            <value>
                <fullName>AIS2000</fullName>
            </value>
            <value>
                <fullName>HD710</fullName>
            </value>
            <value>
                <fullName>DU857</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>RAAS</fullName>
            </value>
            <value>
                <fullName>LSZ</fullName>
            </value>
            <value>
                <fullName>E-NAV</fullName>
            </value>
            <value>
                <fullName>SV1</fullName>
            </value>
            <value>
                <fullName>SV2</fullName>
            </value>
            <value>
                <fullName>XM</fullName>
            </value>
            <value>
                <fullName>CPDLC</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>