src/objects/RMU_Program_Name__c/validationRules/Only_Offering_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Offering_Products</fullName>
    <active>true</active>
    <errorConditionFormula>Product__r.RMU__c == false</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Please select Offering Product</errorMessage>
</ValidationRule>